<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="700dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="2dp"
        android:scaleX="1.1"
        android:src="@drawable/login_circles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_marginEnd="-65dp"
        android:layout_marginBottom="-60dp"
        android:clickable="true"
        android:contentDescription="Add new item"
        app:backgroundTint="#C8C1C1"
        app:fabCustomSize="51dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="102dp"
        android:layout_marginStart="-200dp"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/design"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="83dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="430dp"
            android:layout_height="202dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-30dp"
            android:scaleType="center"
            android:src="@drawable/hand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="380dp"
            android:text="@string/otp"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/first"
            android:textAlignment="center"
            android:textColor="#7C7979"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="1dp"
            android:text="@string/second"
            android:textColor="#7C7979"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/buttonotp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="32dp"
            android:background="#7FC330"
            android:text="@string/getotp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>