<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="405dp"
            android:layout_height="888dp"
            app:srcCompat="@drawable/marketback" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-15dp"
            app:srcCompat="@drawable/logowhite" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            app:srcCompat="@drawable/trend" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/notificationicon"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-300dp"
            android:layout_marginBottom="-70dp"
            android:clickable="true"
            app:backgroundTint="#C6C0C0"
            app:fabCustomSize="51dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:srcCompat="@drawable/bell" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            app:cardBackgroundColor="#9E7844"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/croptype" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/cropname" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Date"
                    android:inputType="date" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:background="#79B632"
                    android:text="@string/price"
                    android:textAllCaps="false"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>