<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="480dp"
        android:layout_height="600dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="320dp"
        android:scaleX="1.2"
        android:src="@drawable/circles_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="300dp"
            android:src="@drawable/farmers_vector_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="493dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_removebg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="-302dp"
                android:text="@string/tag"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="-336dp"
                android:text="@string/tagl"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/signup"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="-265dp"
                android:background="@color/black"
                android:elevation="10dp"
                android:padding="12dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/login"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-265dp"
                android:background="@color/black"
                android:elevation="10dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/signup" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="287dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="600dp"
                    android:src="@drawable/dots_vector_emovebg_preview"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>